knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/Discovery_Bots_Settings__c.object-meta.xml
<CustomObject>
    <label>Discovery Bots Settings</label>
    <nameField>
        <label>Discovery Bots Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discovery Bots Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>