knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Active_All_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_All_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active All Users</label>
    <type>Checkbox</type>
</CustomField>