knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Active_Product_Fields__c.field-meta.xml
<CustomField>
    <fullName>Active_Product_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Product Fields</label>
    <type>Checkbox</type>
</CustomField>