knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <type>TextArea</type>
</CustomField>