knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/API_Endpoint_Profiles__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint_Profiles__c</fullName>
    <label>API_Endpoint_Profiles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>