knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Enable_Automated_Email__c.field-meta.xml
<CustomField>
    <fullName>Enable_Automated_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Automated Email</label>
    <type>Checkbox</type>
</CustomField>