knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Enable_Manual_Button_on_VF__c.field-meta.xml
<CustomField>
    <fullName>Enable_Manual_Button_on_VF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Manual Button on VF</label>
    <type>Checkbox</type>
</CustomField>