knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Enable_Opportunity_Types__c.field-meta.xml
<CustomField>
    <fullName>Enable_Opportunity_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Opportunity Types</label>
    <type>Checkbox</type>
</CustomField>