knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Enable_Sales_Stages__c.field-meta.xml
<CustomField>
    <fullName>Enable_Sales_Stages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Sales Stages</label>
    <type>Checkbox</type>
</CustomField>