knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Enable_Sales_Stages_Values__c.field-meta.xml
<CustomField>
    <fullName>Enable_Sales_Stages_Values__c</fullName>
    <label>Enable Sales Stages Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>