knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Enabled_Opportunity_Stages__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Opportunity_Stages__c</fullName>
    <label>Enabled Opportunity Stages</label>
    <type>TextArea</type>
</CustomField>