knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Enabled_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Record_Types__c</fullName>
    <label>Enabled Record Types</label>
    <type>TextArea</type>
</CustomField>