knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Initiative_id__c.field-meta.xml
<CustomField>
    <fullName>Initiative_id__c</fullName>
    <label>Initiative_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>