knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Open_In_New_Window__c.field-meta.xml
<CustomField>
    <fullName>Open_In_New_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open In New Window</label>
    <type>Checkbox</type>
</CustomField>