knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Opportunity_Amount_Fields__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_Fields__c</fullName>
    <label>Opportunity Amount Fields</label>
    <type>TextArea</type>
</CustomField>