knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Opportunity_Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_Value__c</fullName>
    <label>Opportunity Amount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>