knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Opportunity_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_Field__c</fullName>
    <label>Opportunity Type Field</label>
    <type>TextArea</type>
</CustomField>