knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Opportunity_Types_Map_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Types_Map_1__c</fullName>
    <label>Opportunity Types Map 1</label>
    <type>TextArea</type>
</CustomField>