knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Recepient__c.field-meta.xml
<CustomField>
    <fullName>Recepient__c</fullName>
    <label>Recepient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>