knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/Survey_Collector_Email__c.field-meta.xml
<CustomField>
    <fullName>Survey_Collector_Email__c</fullName>
    <label>Survey Collector Email</label>
    <type>TextArea</type>
</CustomField>