knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/TruVoice_API_Key__c.field-meta.xml
<CustomField>
    <fullName>TruVoice_API_Key__c</fullName>
    <label>TruVoice API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>