knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/TruVoice_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>TruVoice_Client_ID__c</fullName>
    <label>TruVoice Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>