knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Discovery_Bots_Settings__c/fields/TruVoiceIntegration__c.field-meta.xml
<CustomField>
    <fullName>TruVoiceIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TruVoiceIntegration</label>
    <type>Checkbox</type>
</CustomField>